fixed navigationBar login and temperary truncate of news-description

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,3 +22,23 @@
   align-items: center;
   height: 100vh;
 }
+
+.fade-out {
+  position: relative;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.fade-out::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 1.2em; /* You can adjust this value to control the height of the fade */
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 1) 75%
+  );
+}
